implementing weather function

--- a/pages/prep.html
+++ b/pages/prep.html
@@ -16,7 +16,11 @@
         </ul>
     
         <div class="temp">
-            <h1>59°F</h1>
+            <p>icon</p>
+            <h1 class="today" id="current-temp" >59°F</h1>
+            <p class="time-zone" id="time-zone">New York/North America</p>
+            <p id="country" class="country">NY</p>
+            <p>Broken Clouds</p>
         </div>
         
         <h2>Style</h2>
