--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -16,19 +16,33 @@
         </ul>
     
         <div class="temp">
-            <h1>59°F</h1>
+            <p>icon</p>
+            <h1 class="today" id="current-temp" >59°F</h1>
+            <p class="time-zone" id="time-zone">New York/North America</p>
+            <p id="country" class="country">NY</p>
+            <p>Broken Clouds</p>
         </div>
         
-        <table class="detail_table">
-            <tr>
-                <th  class="detail_unit"><b>Hourly</b></th>
-                <td></td>
-            </tr>
-            <tr>
-                <th  class="detail_unit"><b>Daily</b></th>
-                <td></td>
-            </tr>
-        </table>
+        <div class="weather-forecast" id="weather-forecast">
+            <div class="weather-forecast-item">
+                <div class="day">Monday</div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Night - 25.6&#176; C</div>
+                <div class="temp">Day - 35.6&#176; C</div>
+            </div>
+            <div class="weather-forecast-item">
+                <div class="day">Monday</div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Night - 25.6&#176; C</div>
+                <div class="temp">Day - 35.6&#176; C</div>
+            </div>
+            <div class="weather-forecast-item">
+                <div class="day">Monday</div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Night - 25.6&#176; C</div>
+                <div class="temp">Day - 35.6&#176; C</div>
+            </div>
+        </div>
         <footer>
             <!--Ads-->
             <div class="ads">
