styling future forecast

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </ul>
     
         <div class="temp">
-            <h1 class="today" id="current-temp" >
-                <img src="" alt="weather icon" class="w-icon">
+            <h4 class="today" id="current-temp" >
+                <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather icon" class="w-icon">
                 <div class="temp">Night - 25.6&#176; C</div>
                 <div class="temp">Day - 35.6&#176; C</div>
-            </h1>
+            </h4>
             <p class="time-zone" id="time-zone">New York/North America</p>
             <p id="country" class="country">NY</p>
             <p>Broken Clouds</p>
